🐛 Fix site menu z-index

--- a/src/components/site-header/site-header.module.styl
+++ b/src/components/site-header/site-header.module.styl
@@ -85,6 +85,7 @@
 
 .header-modal
   position fixed
+  z-index 1000
   top: 0
   left: 0
   right: 0
@@ -176,12 +177,12 @@
       background-color: darken(white, 10)
   
   &--pressed
+    z-index 1001
     transform translateY(1px)
     box-shadow: none
 
     span
       position relative
-      z-index: 2
 
       &:first-child
         transform translateX(-2px) translateY(8px) rotate(45deg)
